Fixed homepage box spacing

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ ul{
 
 .box{
     float:left;
-    margin-right:20px;
 }
 .clear{
     clear:both;
@@ -197,7 +196,7 @@ header a:hover{
 
 #showcase .column1{
   width:50%;
-  padding: 0 10px 0 30px;
+  padding: 0 10px 30px 30px;
   float: left;
 }
 #showcase .column2{
@@ -238,7 +237,7 @@ header a:hover{
   text-decoration: none;
   display:inline;
   text-align:left;
-  bottom:60px;
+  bottom:-60px;
   left:0px;
 }
 
@@ -308,14 +307,12 @@ header a:hover{
 
 #boxes .box{
   float:left;
-  width:30%;
   padding:18px;
   text-align:center;
 }
 
 #boxes .box2{
   float:left;
-  width:30%;
   padding:18px;
   text-align:center;
 }
